src/test/dev-workspace/src-readable/java/net/labymod/core/laby3d/opengl/error/generated/NVPointSprite_StringErrorContext.java
package net.labymod.core.laby3d.opengl.error.generated;

import java.util.HashMap;
import java.util.Map;

/* JADX INFO: loaded from: LabyMod-4.jar:net/labymod/core/laby3d/opengl/error/generated/NVPointSprite_StringErrorContext.class */
public final class NVPointSprite_StringErrorContext {
    public static Map<String, String> buildMethods() {
        Map<String, String> methods = new HashMap<>();
        methods.put("glPointParameteriNV(II)V", "net/labymod/core/laby3d/opengl/error/generated/NVPointSpriteErrorContext");
        methods.put("nglPointParameterivNV(IJ)V", "net/labymod/core/laby3d/opengl/error/generated/NVPointSpriteErrorContext");
        methods.put("glPointParameterivNV(ILjava/nio/IntBuffer;)V", "net/labymod/core/laby3d/opengl/error/generated/NVPointSpriteErrorContext");
        methods.put("glPointParameterivNV(I[I)V", "net/labymod/core/laby3d/opengl/error/generated/NVPointSpriteErrorContext");
        return methods;
    }
}
